Updated entire project with new files and folders

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,10 @@
 <body>
     <header class="contact-header">
         <nav class="navbar">
-            <h1 class="site-name">VibeTunes</h1>
+            <!-- ✅ Clickable Logo -->
+            <a href="index.html">
+                <img src="assets/VibeTunes logo-modified.png" alt="VibeTunes Logo" class="logo">
+            </a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="contact.html">Contact</a>
