--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="index.html">
-                <img src="assets/VibeTunes logo-modified.png" alt="VibeTunes Logo" class="logo">
+            <!-- Logo on Left -->
+            <a href="index.html" class="logo-container">
+                <img src="assets/VibeTunes logo-modified.png" 
+                     alt="VibeTunes Logo" 
+                     class="logo">
             </a>
-            <h1 class="site-name"></h1>
+
+            <!-- Navigation Links on Right -->
             <nav class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="contact.html">Contact Us</a>
@@ -21,9 +25,11 @@
     </header>
 
     <main>
-        <input type="text" id="search-bar" placeholder="Search for songs..." oninput="searchSongs(this.value)">
+        <input type="text" id="search-bar" 
+               placeholder="Search for songs..." 
+               oninput="searchSongs(this.value)">
 
-        <!-- Updated Search Results Section -->
+        <!-- Search Results Section -->
         <div id="search-results-container" class="song-section" style="display: none;">
             <h2>Search Results</h2>
             <div class="scroll-container"></div>
@@ -50,8 +56,12 @@
             <img id="player-thumbnail" src="" alt="Thumbnail">
             <div>
                 <h4 id="player-title">Song Title</h4>
-                <audio id="audio-player" ontimeupdate="updateSeekBar()" onended="handleSongEnd()"></audio>
-                <input type="range" id="seek-bar" value="0" max="100" step="1" oninput="seekSong(this.value)">
+                <audio id="audio-player" 
+                       ontimeupdate="updateSeekBar()" 
+                       onended="handleSongEnd()"></audio>
+                <input type="range" id="seek-bar" 
+                       value="0" max="100" step="1" 
+                       oninput="seekSong(this.value)">
             </div>
         </div>
         <div class="player-controls">
@@ -60,7 +70,9 @@
             <button id="play-pause-btn" onclick="togglePlay()">▶</button>
             <button onclick="nextSong()">⏭</button>
             <button id="repeat-btn" onclick="toggleRepeat()">🔁</button>
-            <input type="range" id="volume-bar" value="100" max="100" step="1" oninput="changeVolume(this.value)">
+            <input type="range" id="volume-bar" 
+                   value="300" max="300" step="1" 
+                   oninput="changeVolume(this.value)">
         </div>
     </div>
 
