--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="/assets/favicon - Copy.ico" type="image/x-icon">
     <title>VibeTunes</title>
 </head>
 <body>
@@ -65,14 +66,14 @@
             </div>
         </div>
         <div class="player-controls">
-            <button id="shuffle-btn" onclick="toggleShuffle()">🔀</button>
             <button onclick="previousSong()">⏮</button>
             <button id="play-pause-btn" onclick="togglePlay()">▶</button>
             <button onclick="nextSong()">⏭</button>
             <button id="repeat-btn" onclick="toggleRepeat()">🔁</button>
-            <input type="range" id="volume-bar" 
-                   value="300" max="300" step="1" 
-                   oninput="changeVolume(this.value)">
+            <!-- Add this near your volume controls -->
+            <span id="volume-percentage"></span>
+            <input type="range" id="volume-slider" min="0" max="100" value="100" 
+             oninput="changeVolume(this.value)" onchange="changeVolume(this.value)">
         </div>
     </div>
 
