Updated entire project

--- a/index.html
+++ b/index.html
@@ -38,14 +38,26 @@
 
         <!-- Bhojpuri Songs Section -->
         <section class="song-section">
-            <h2>Bhojpuri Hits</h2>
+            <h2>Trending Bhojpuri</h2>
             <div class="scroll-container" id="bhojpuri-list"></div>
+        </section>
+
+        <!-- Bhojpuri Collection Section -->
+        <section class="song-section">
+            <h2>Bhojpuri Collection</h2>
+            <div class="scroll-container" id="bhojpuri-collection"></div>
         </section>
 
         <!-- Phonk Songs Section -->
         <section class="song-section">
-            <h2>Phonk Beats</h2>
+            <h2>Trending Phonks</h2>
             <div class="scroll-container" id="phonk-list"></div>
+        </section>
+
+        <!-- Phonk Collection Section -->
+        <section class="song-section">
+            <h2>Phonk Collection</h2>
+            <div class="scroll-container" id="phonk-collection"></div>
         </section>
 
         <div id="song-list"></div>
