--- a/index.html
+++ b/index.html
@@ -6,29 +6,78 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="/assets/favicon - Copy.ico" type="image/x-icon">
     <title>VibeTunes</title>
+
+    <!-- ✅ Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+    <script>
+        // ✅ Firebase Configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyClIhXAaTVmlqhEPxU49C9w9fDkUag-1eQ",
+            authDomain: "vibe-tunes.firebaseapp.com",
+            databaseURL: "https://vibe-tunes-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "vibe-tunes",
+            storageBucket: "vibe-tunes.firebasestorage.app",
+            messagingSenderId: "792892627539",
+            appId: "1:792892627539:web:69817da08d2d4741a404a6",
+            measurementId: "G-7RQD85KP8Z"
+        };
+
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const db = firebase.firestore();
+
+        // ✅ Update Navbar Based on Auth State
+        auth.onAuthStateChanged(user => {
+            const accountNavItem = document.getElementById("nav-account");
+
+            if (user) {
+                console.log("User is logged in:", user.email);
+                accountNavItem.innerHTML = `<a href="auth.html">Account</a>`;
+            } else {
+                console.warn("No user logged in.");
+                accountNavItem.innerHTML = `<a href="auth.html">Login</a>`;
+            }
+        });
+
+        // ✅ Redirect Unauthenticated Users to Login Page
+        function checkUserSession() {
+            auth.onAuthStateChanged(user => {
+                if (!user) {
+                    console.warn("No user logged in, redirecting to login page.");
+                    window.location.href = "auth.html";
+                } else {
+                    console.log("User detected:", user.email);
+                }
+            });
+        }
+
+        document.addEventListener("DOMContentLoaded", checkUserSession);
+    </script>
 </head>
 <body>
+
+    <!-- ✅ Navigation Bar -->
     <header>
         <div class="navbar">
             <!-- Logo on Left -->
             <a href="index.html" class="logo-container">
-                <img src="assets/VibeTunes logo-modified.png" 
-                     alt="VibeTunes Logo" 
-                     class="logo">
+                <img src="assets/VibeTunes logo-modified.png" alt="VibeTunes Logo" class="logo">
             </a>
 
             <!-- Navigation Links on Right -->
             <nav class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="contact.html">Contact Us</a>
+                <span id="nav-account"><a href="auth.html">Login</a></span> <!-- Dynamic -->
             </nav>
         </div>
     </header>
 
     <main>
-        <input type="text" id="search-bar" 
-               placeholder="Search for songs..." 
-               oninput="searchSongs(this.value)">
+        <input type="text" id="search-bar" placeholder="Search for songs..." oninput="searchSongs(this.value)">
 
         <!-- Search Results Section -->
         <div id="search-results-container" class="song-section" style="display: none;">
@@ -69,12 +118,8 @@
             <img id="player-thumbnail" src="" alt="Thumbnail">
             <div>
                 <h4 id="player-title">Song Title</h4>
-                <audio id="audio-player" 
-                       ontimeupdate="updateSeekBar()" 
-                       onended="handleSongEnd()"></audio>
-                <input type="range" id="seek-bar" 
-                       value="0" max="100" step="1" 
-                       oninput="seekSong(this.value)">
+                <audio id="audio-player" ontimeupdate="updateSeekBar()" onended="handleSongEnd()"></audio>
+                <input type="range" id="seek-bar" value="0" max="100" step="1" oninput="seekSong(this.value)">
             </div>
         </div>
         <div class="player-controls">
@@ -82,10 +127,8 @@
             <button id="play-pause-btn" onclick="togglePlay()">▶</button>
             <button onclick="nextSong()">⏭</button>
             <button id="repeat-btn" onclick="toggleRepeat()">🔁</button>
-            <!-- Add this near your volume controls -->
             <span id="volume-percentage"></span>
-            <input type="range" id="volume-slider" min="0" max="100" value="100" 
-             oninput="changeVolume(this.value)" onchange="changeVolume(this.value)">
+            <input type="range" id="volume-slider" min="0" max="100" value="100" oninput="changeVolume(this.value)" onchange="changeVolume(this.value)">
         </div>
     </div>
 
@@ -93,6 +136,7 @@
         <p>&copy; 2025 VibeTunes. All rights reserved.</p>
     </footer>
 
+    <!-- ✅ Player Script -->
     <script src="scripts/player.js"></script>
 </body>
 </html>
