--- a/index.html
+++ b/index.html
@@ -109,6 +109,18 @@
             <div class="scroll-container" id="phonk-collection"></div>
         </section>
 
+        <!-- Haryanvi Songs Section -->
+        <section class="song-section">
+            <h2>Trending Haryanvi</h2>
+            <div class="scroll-container" id="haryanvi-list"></div>
+        </section>
+
+        <!-- Haryanvi Collection Section -->
+        <section class="song-section">
+            <h2>Haryanvi Collection</h2>
+            <div class="scroll-container" id="haryanvi-collection"></div>
+        </section>
+
         <div id="song-list"></div>
     </main>
 
