--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="/assets/favicon - Copy.ico" type="image/x-icon">
     <title>VibeTunes</title>
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
 
     <!-- ✅ Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
