--- a/index.html
+++ b/index.html
@@ -141,12 +141,15 @@
             <button onclick="nextSong()">⏭</button>
             <button id="repeat-btn" onclick="toggleRepeat()">🔁</button>
             <span id="volume-percentage"></span>
-            <input type="range" id="volume-slider" min="0" max="100" value="100" oninput="changeVolume(this.value)" onchange="changeVolume(this.value)">
+            
         </div>
     </div>
 
     <footer>
         <p>&copy; 2025 VibeTunes. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a>
+        </div>
     </footer>
 
     <!-- ✅ Player Script -->
