--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="/assets/favicon - Copy.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Contact Us - VibeTunes</title>
 </head>
@@ -16,7 +17,7 @@
             </a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="contact.html">Contact</a>
+                <a href="Privacy-Policy.html">Privacy Policy</a>
             </div>
         </nav>
     </header>
@@ -88,7 +89,6 @@
     <footer class="footer">
         <p>&copy; 2025 VibeTunes. All rights reserved.</p>
         <div class="footer-links">
-            <a href="#">Privacy Policy</a>
         </div>
     </footer>
 
