--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <nav class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="contact.html">Contact Us</a>
+                <a href="Privacy-Policy.html">Privacy Policy</a>
                 <span id="nav-account"><a href="auth.html">Login</a></span> <!-- Dynamic -->
             </nav>
         </div>
@@ -141,18 +142,16 @@
             <button onclick="nextSong()">⏭</button>
             <button id="repeat-btn" onclick="toggleRepeat()">🔁</button>
             <span id="volume-percentage"></span>
-            
         </div>
     </div>
 
     <footer>
         <p>&copy; 2025 VibeTunes. All rights reserved.</p>
         <div class="footer-links">
-            <a href="#">Privacy Policy</a>
         </div>
     </footer>
 
     <!-- ✅ Player Script -->
-    <script src="scripts/player.js"></script>
+    <script src="scripts/player.js"></script> 
 </body>
 </html>
