--- a/auth.html
+++ b/auth.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Overview | VibeTunes</title>
+    <link rel="icon" href="/assets/favicon - Copy.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
@@ -336,6 +337,7 @@
             <nav class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="contact.html">Contact Us</a>
+                <a href="Privacy-Policy.html">Privacy Policy</a>
             </nav>
         </div>
     </header>
