--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>VibeTunes</title>
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
 
-    <!-- ✅ Firebase SDK -->
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
     <script>
-        // ✅ Firebase Configuration
+        // Firebase Configuration
         const firebaseConfig = {
             apiKey: "AIzaSyClIhXAaTVmlqhEPxU49C9w9fDkUag-1eQ",
             authDomain: "vibe-tunes.firebaseapp.com",
@@ -30,7 +30,7 @@
         const auth = firebase.auth();
         const db = firebase.firestore();
 
-        // ✅ Update Navbar Based on Auth State
+        // Update Navbar Based on Auth State
         auth.onAuthStateChanged(user => {
             const accountNavItem = document.getElementById("nav-account");
 
@@ -43,7 +43,7 @@
             }
         });
 
-        // ✅ Redirect Unauthenticated Users to Login Page
+        // Redirect Unauthenticated Users to Login Page
         function checkUserSession() {
             auth.onAuthStateChanged(user => {
                 if (!user) {
@@ -59,8 +59,7 @@
     </script>
 </head>
 <body>
-
-    <!-- ✅ Navigation Bar -->
+    <!-- Navigation Bar -->
     <header>
         <div class="navbar">
             <!-- Logo on Left -->
@@ -146,12 +145,12 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 VibeTunes. All rights reserved.</p>
+        <p>© 2025 VibeTunes. All rights reserved.</p>
         <div class="footer-links">
         </div>
     </footer>
 
-    <!-- ✅ Player Script -->
+    <!-- Player Script -->
     <script src="scripts/player.js"></script> 
 </body>
 </html>
