--- a/Terms-Conditions.html
+++ b/Terms-Conditions.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Center - VibeTunes</title>
+    <title>Terms & Conditions - VibeTunes</title>
     <link rel="icon" href="assets/favicon - Copy.ico" type="image/x-icon">
     <style>
-        /* Base Styles */
+        /* Base Styles (Same as Privacy Policy) */
         :root {
             --primary: #9333ea;
             --secondary: #a855f7;
@@ -39,7 +39,7 @@
             overflow-x: hidden;
         }
 
-        /* Enhanced Navbar */
+        /* Navbar (Same Style) */
         .navbar {
             padding: 1rem 5%;
             background: rgba(17, 24, 39, 0.98);
@@ -67,7 +67,7 @@
         }
 
         /* Main Content Container */
-        .privacy-hero {
+        .terms-hero {
             max-width: 800px;
             margin: 2rem auto;
             padding: 2rem 5%;
@@ -81,8 +81,8 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
-        /* Policy Header */
-        .policy-header {
+        /* Terms Header */
+        .terms-header {
             text-align: center;
             margin-bottom: 3rem;
             padding: 2rem;
@@ -91,7 +91,7 @@
             width: 100%;
         }
 
-        .policy-header h1 {
+        .terms-header h1 {
             font-size: clamp(2rem, 5vw, 2.8rem);
             background: linear-gradient(45deg, var(--primary), var(--accent));
             -webkit-background-clip: text;
@@ -100,15 +100,8 @@
             line-height: 1.2;
         }
 
-        .header-highlight {
-            color: var(--accent);
-            font-weight: 600;
-            margin: 1.5rem 0;
-            display: block;
-        }
-
-        /* Interactive Sections */
-        .policy-section {
+        /* Terms Sections */
+        .terms-section {
             background: rgba(255, 255, 255, 0.03);
             padding: 2rem;
             border-radius: 15px;
@@ -118,7 +111,7 @@
             width: 100%;
         }
 
-        .policy-section:hover {
+        .terms-section:hover {
             transform: translateX(10px);
             background: rgba(147, 51, 234, 0.1);
         }
@@ -131,13 +124,6 @@
             margin-bottom: 1.5rem;
         }
 
-        .section-title svg {
-            width: 28px;
-            height: 28px;
-            min-width: 28px;
-            fill: var(--primary);
-        }
-
         .highlight-box {
             padding: 1.5rem;
             background: rgba(147, 51, 234, 0.1);
@@ -147,37 +133,7 @@
             word-break: break-word;
         }
 
-        /* FAQ Section */
-        .faq-grid {
-            display: grid;
-            gap: 1.5rem;
-            margin-top: 2rem;
-            width: 100%;
-        }
-
-        .faq-item {
-            padding: 1.5rem;
-            background: rgba(255, 255, 255, 0.03);
-            border-radius: 12px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .faq-question {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-weight: 600;
-            color: var(--accent);
-        }
-
-        .faq-answer {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.3s ease;
-        }
-
-        /* Footer */
+        /* Footer (Same Style) */
         .footer {
             text-align: center;
             padding: 3rem 2rem;
@@ -208,11 +164,11 @@
                 padding: 0.8rem 5%;
             }
 
-            .policy-header {
+            .terms-header {
                 padding: 1.5rem;
             }
 
-            .policy-section {
+            .terms-section {
                 padding: 1.5rem;
             }
 
@@ -222,7 +178,7 @@
         }
 
         @media (max-width: 480px) {
-            .policy-header h1 {
+            .terms-header h1 {
                 font-size: 1.8rem;
             }
 
@@ -244,118 +200,108 @@
         </div>
     </nav>
 
-    <main class="privacy-hero">
-        <div class="policy-header">
-            <h1>Your Privacy Matters</h1>
-            <span class="header-highlight">Transparent • Secure • Respectful</span>
-            <p>We believe in clear communication about your data. This policy explains:</p>
+    <main class="terms-hero">
+        <div class="terms-header">
+            <h1>Terms of Service</h1>
+            <p></p>
             <div style="display: flex; gap: 1rem; justify-content: center; margin-top: 1.5rem; flex-wrap: wrap;">
-                <div class="highlight-box">What we collect</div>
-                <div class="highlight-box">How we use it</div>
-                <div class="highlight-box">Your rights</div>
+                <div class="highlight-box">User Agreement</div>
+                <div class="highlight-box">Your Responsibilities</div>
+                <div class="highlight-box">Legal Terms</div>
             </div>
         </div>
 
-        <section class="policy-section">
+        <section class="terms-section">
             <div class="section-title">
-                <svg viewBox="0 0 24 24"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
-                <h2>Data Collection</h2>
+                <svg viewBox="0 0 24 24" style="width:28px;height:28px"><path fill="currentColor" d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M11,16.5L18,9.5L16.59,8.09L11,13.67L7.91,10.59L6.5,12L11,16.5Z"/></svg>
+                <h2>1. Acceptance of Terms</h2>
             </div>
-            <p>We only collect what's necessary:</p>
+            <p>By using VibeTunes, you agree to:</p>
             <ul>
-                <li><strong>Account Info:</strong> Email & username for personalized experience</li>
-                <li><strong>Activity Data:</strong> Songs played, preferences (to improve service)</li>
-                <li><strong>Technical Info:</strong> Device type & browser (for compatibility)</li>
+                <li>Comply with all applicable laws</li>
+                <li>Be responsible for account security</li>
+                <li>Accept our content guidelines</li>
             </ul>
             <div class="highlight-box">
-                <strong>We Never Collect:</strong> Sensitive financial info, location data, or personal messages
+                <strong>Minimum Age:</strong> You must be at least 13 years old to use our services
             </div>
         </section>
 
-        <section class="policy-section">
+        <section class="terms-section">
             <div class="section-title">
-                <svg viewBox="0 0 24 24"><path d="M12 15c1.66 0 3-1.34 3-3V6c0-1.66-1.34-3-3-3S9 4.34 9 6v6c0 1.66 1.34 3 3 3zm-1 1.93c-3.94-.49-7-3.85-7-7.93h2c0 3.31 2.69 6 6 6s6-2.69 6-6h2c0 4.08-3.06 7.44-7 7.93V23h-2v-6.07z"/></svg>
-                <h2>Data Protection</h2>
+                <svg viewBox="0 0 24 24" style="width:28px;height:28px"><path fill="currentColor" d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.68 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"/></svg>
+                <h2>2. User Responsibilities</h2>
             </div>
-            <p>Your data is guarded with:</p>
+            <p>You agree not to:</p>
             <ul>
-                <li>256-bit SSL encryption</li>
-                <li>Regular security audits</li>
-                <li>Limited employee access</li>
+                <li>Share your account credentials</li>
+                <li>Upload illegal or harmful content</li>
+                <li>Reverse engineer our services</li>
+                <li>Use automated scraping tools</li>
             </ul>
             <div class="highlight-box">
-                <strong>24/7 Monitoring:</strong> Our security team works round-the-clock to prevent breaches
+                <strong>Content Ownership:</strong> You retain rights to your content but grant us a worldwide license to use it
             </div>
         </section>
 
-        <section class="faq-grid">
-            <h3 style="text-align: center; color: var(--accent); margin-bottom: 2rem;">Frequently Asked Questions</h3>
-            
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>Can I delete my data?</span>
-                    <span>▼</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Yes! Visit your account settings or contact us directly. We'll remove all personal data within 72 hours.</p>
-                </div>
+        <section class="terms-section">
+            <div class="section-title">
+                <svg viewBox="0 0 24 24" style="width:28px;height:28px"><path fill="currentColor" d="M17,13H13V17H11V13H7V11H11V7H13V11H17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"/></svg>
+                <h2>3. Subscription & Payments</h2>
             </div>
-
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>Do you sell data to third parties?</span>
-                    <span>▼</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Never. We don't sell, trade, or rent your personal information to anyone.</p>
-                </div>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>How can I opt-out of tracking?</span>
-                    <span>▼</span>
-                </div>
-                <div class="faq-answer">
-                    <p>Adjust your preferences in account settings or use browser privacy extensions. We respect Do Not Track signals.</p>
-                </div>
+            <p>For premium services:</p>
+            <ul>
+                <li>Automatic monthly/yearly renewals</li>
+                <li>Cancel anytime before renewal date</li>
+                <li>No refunds for partial periods</li>
+            </ul>
+            <div class="highlight-box">
+                <strong>Price Changes:</strong> We may change subscription fees with 30-day notice
             </div>
         </section>
 
-        <section class="policy-section">
+        <section class="terms-section">
             <div class="section-title">
-                <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/></svg>
-                <h2>Your Rights</h2>
+                <svg viewBox="0 0 24 24" style="width:28px;height:28px"><path fill="currentColor" d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,7C13.4,7 14.5,8.1 14.5,9.5C14.5,10.9 13.4,12 12,12C10.6,12 9.5,10.9 9.5,9.5C9.5,8.1 10.6,7 12,7M18,15.66C16.09,16.87 14.5,17.65 12,17.92V20H15V22H9V20H12V17.92C8.34,17.57 5.71,15.5 5.17,12.94C5.1,12.46 5.06,12 5.06,11.66C5.06,11.3 5.1,10.94 5.17,10.44L7.25,11.66C7.25,11.94 7.22,12.16 7.19,12.4C7.41,14 9.05,15.22 11,15.47C11.5,14.35 12.59,13.5 13.88,13.5C14.18,13.5 14.5,13.54 14.76,13.62C15.62,13.88 16.34,14.41 16.84,15.1L18,15.66Z"/></svg>
+                <h2>4. Termination</h2>
             </div>
-            <p>You control your data:</p>
+            <p>We may terminate accounts for:</p>
             <ul>
-                <li>📋 Access full data report</li>
-                <li>✏️ Request corrections</li>
-                <li>🗑️ Delete account permanently</li>
-                <li>📵 Opt-out of data collection</li>
+                <li>Violation of these terms</li>
+                <li>Illegal activities</li>
+                <li>Extended account inactivity</li>
             </ul>
             <div class="highlight-box">
-                <strong>Contact Our Privacy Team:</strong> <a href="mailto:privacy@vibetunes.com" style="color: var(--accent);">privacy@vibetunes.com</a>
+                <strong>Notice:</strong> We'll provide 14-day notice for non-violation terminations
+            </div>
+        </section>
+
+        <section class="terms-section">
+            <div class="section-title">
+                <svg viewBox="0 0 24 24" style="width:28px;height:28px"><path fill="currentColor" d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M14.06,8.94L15,10L8,17L7,16L14.06,8.94M17.85,6.85L18.56,7.56C19.15,8.15 19.15,9.06 18.56,9.65L10.1,18.11L7.85,15.85L16.41,7.29C16.8,6.9 17.39,6.9 17.78,7.29L17.85,7.36L17.85,6.85Z"/></svg>
+                <h2>5. Modifications</h2>
+            </div>
+            <p>We reserve the right to:</p>
+            <ul>
+                <li>Update these terms periodically</li>
+                <li>Change service features</li>
+                <li>Discontinue services</li>
+            </ul>
+            <div class="highlight-box">
+                <strong>Notification:</strong> Major changes will be notified via email or in-app messages
             </div>
         </section>
     </main>
 
     <footer class="footer">
         <div class="footer-links">
-            <a href="Terms-Conditions.html">Terms of Service</a>
+            <a href="Privacy-Policy.html">Privacy Policy</a>
             <a href="contact.html">Contact Support</a>
         </div>
-        <p style="margin-top: 1.5rem; opacity: 0.8;">© 2025 VibeTunes - Music with Respect</p>
+        <p style="margin-top: 1.5rem; opacity: 0.8;">© 2025 VibeTunes - Fair Use Policy</p>
     </footer>
-    <script>
-        // FAQ Interaction
-        document.querySelectorAll('.faq-item').forEach(item => {
-            item.addEventListener('click', () => {
-                const answer = item.querySelector('.faq-answer');
-                answer.style.maxHeight = answer.style.maxHeight ? null : `${answer.scrollHeight}px`;
-            });
-        });
 
+    <script>
         // Navbar Scroll Behavior
         let lastScroll = 0;
         const navbar = document.querySelector('.navbar');
