--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
 
             <!-- Navigation Links on Right -->
             <nav class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="contact.html">Contact Us</a>
-                <a href="Privacy-Policy.html">Privacy Policy</a>
                 <span id="nav-account"><a href="auth.html">Login</a></span> <!-- Dynamic -->
             </nav>
         </div>
@@ -144,10 +141,13 @@
         </div>
     </div>
 
-    <footer>
-        <p>© 2025 VibeTunes. All rights reserved.</p>
+    <footer class="footer">
         <div class="footer-links">
+            <a href="Terms-Conditions.html">Terms of Service</a>
+            <a href="contact.html">Contact Support</a>
+            <a href="Privacy-Policy.html">Privacy Policy</a>
         </div>
+        <p style="margin-top: 1.5rem; opacity: 0.8;">© 2025 VibeTunes - Music with Respect</p>
     </footer>
 
     <!-- Player Script -->
