--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -335,7 +335,7 @@
                 <li>📵 Opt-out of data collection</li>
             </ul>
             <div class="highlight-box">
-                <strong>Contact Our Privacy Team:</strong> <a href="mailto:privacy@vibetunes.com" style="color: var(--accent);">privacy@vibetunes.com</a>
+                <strong>Contact Our Privacy Team:</strong> <a href="mailto:vibetunesmusics@gmail.com" style="color: var(--accent);">privacy@vibetunes.com</a>
             </div>
         </section>
     </main>
