--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
         <div class="player-controls">
             <button onclick="previousSong()">⏮</button>
-            <button id="play-pause-btn" onclick="togglePlay()">▶</button>
+            <button id="play-pause-btn">▶</button>
             <button onclick="nextSong()">⏭</button>
             <button id="repeat-btn" onclick="toggleRepeat()">🔁</button>
             <button id="queue-toggle-btn">📜</button>
@@ -169,7 +169,7 @@
             <a href="contact.html">Contact Support</a>
             <a href="Privacy-Policy.html">Privacy Policy</a>
         </div>
-        <p style="margin-top: 1.5rem; opacity: 0.8;">© 2025 VibeTunes - Music with Respect</p>
+        <p style="margin-top: 1.5rem; opacity: 0.8;"> 2025 VibeTunes - Music with Respect</p>
     </footer>
 
     <!-- Scripts -->
