--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
             </div>
         </div>
         <div class="player-controls">
-            <button onclick="previousSong()">⏮</button>
-            <button id="play-pause-btn">▶</button>
-            <button onclick="nextSong()">⏭</button>
+            <button onclick="previousSong()">⏮️</button>
+            <button id="play-pause-btn">▶️</button>
+            <button onclick="nextSong()">⏭️</button>
             <button id="repeat-btn" onclick="toggleRepeat()">🔁</button>
-            <button id="queue-toggle-btn">📜</button>
+            <button id="queue-toggle-btn">📃</button>
             <span id="volume-percentage"></span>
         </div>
     </div>
