--- a/contact.html
+++ b/contact.html
@@ -72,13 +72,13 @@
                     </div>
                     
                     <div class="social-links">
-                        <a href="#" class="social-link">
+                        <a href="https://www.facebook.com/profile.php?id=61574974955297" class="social-link">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="#" class="social-link">
+                        <a href="https://x.com/VibeTunesMusics" class="social-link">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="#" class="social-link">
+                        <a href="https://www.instagram.com/vibetunesmusics/?igsh=MTcxaHUwYWk4NDlkdw%3D%3D#" class="social-link">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
