--- a/shared.html
+++ b/shared.html
@@ -200,6 +200,9 @@
             </a>
             <nav class="nav-links">
                 <span><a href="index.html">Home</a></span>
+                <ul>
+                    <!-- Removed Downloads link as per user request -->
+                </ul>
             </nav>
         </div>
     </header>
