--- a/index.html
+++ b/index.html
@@ -183,5 +183,7 @@
     <!-- Scripts -->
     <script src="scripts/player.js"></script>
     <script src="scripts/queue.js"></script>
+    <script src="scripts/downloads.js"></script>
+    <script src="scripts/mail.js"></script>
 </body>
 </html>
