--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             <div class="scroll-container"></div>
         </div>
 
+        <!-- Recently Played Section -->
+        <section class="song-section" id="recently-played-section">
+            <h2>Recently Played</h2>
+            <div class="scroll-container" id="recently-played-container"></div>
+        </section>
+
         <!-- Bhojpuri Songs Section -->
         <section class="song-section">
             <h2>Trending Bhojpuri</h2>
@@ -181,9 +187,11 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="scripts/utils.js"></script>
     <script src="scripts/player.js"></script>
     <script src="scripts/queue.js"></script>
     <script src="scripts/downloads.js"></script>
     <script src="scripts/mail.js"></script>
+    <script src="scripts/recommendations.js"></script>
 </body>
 </html>
