--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
     <script src="scripts/queue.js"></script>
     <script src="scripts/downloads.js"></script>
     <script src="scripts/mail.js"></script>
+    <script src="scripts/firebase-integration.js"></script>
+    <script src="scripts/recently-played.js"></script>
     <script src="scripts/recommendations.js"></script>
 </body>
 </html>
