--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             <div class="scroll-container"></div>
         </div>
 
+        <!-- Hindi Song Remix Collection -->
+        <section class="song-section">
+            <h2>Hindi Remixes</h2>
+            <div class="scroll-container" id="remix-collection"></div>
+        </section>
+
         <!-- Bhojpuri Songs Section -->
         <section class="song-section">
             <h2>Trending Bhojpuri</h2>
