--- a/index.html
+++ b/index.html
@@ -191,5 +191,6 @@
     <script src="scripts/player.js"></script>
     <script src="scripts/queue.js"></script>
     <script src="scripts/mail.js"></script>
+    <script src="scripts/suppresslog.js"></script>
 </body>
 </html>
