--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="/assets/favicon - Copy.ico" type="image/x-icon">
     <title>VibeTunes</title>
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
